--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
     <title>KALKULATOR</title>
 </head>
+
 <body>
     <div class="container">
         <div class="calculator">
-            <div><h2 style="color: antiquewhite; padding-left: 15px;">My Calculator</h2></div>
+            <div>
+                <h2 style="color: antiquewhite; padding-left: 15px;">My Calculator</h2>
+            </div>
             <form>
                 <div class="display">
-                    <input type="text" name="display">
+                    <input type="text" name="display" readonly="readonly">
                 </div>
                 <div>
                     <input type="button" value="AC" onclick="display.value ='' ">
@@ -39,7 +43,7 @@
                     <input type="button" value="+" onclick="display.value += '+' ">
                 </div>
                 <div>
-                    <input type="button" value="00"onclick="display.value += '00' ">
+                    <input type="button" value="00" onclick="display.value += '00' ">
                     <input type="button" value="0" onclick="display.value += '0' ">
                     <input type="button" value="=" class="equal" onclick="display.value = eval(display.value) ">
                 </div>
@@ -47,4 +51,5 @@
         </div>
     </div>
 </body>
+
 </html>
